--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate. And this is my comment.</p>
-
+		<p>This is another comment.</p>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
